// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "kalix/annotations.proto"; // <1>
import "google/api/annotations.proto";

package com.example; // <2>

option (kalix.codegen).value_entity = { // <3>
  name: "Counter" // <4>
  entity_type: "counter" // <5>
  state: ".domain.CounterState" // <6>
};

message IncreaseValue { // <7>
  string counter_id = 1 [(kalix.field).entity_key = true]; // <8>
  int32 value = 2;
}

message DecreaseValue {
  string counter_id = 1 [(kalix.field).entity_key = true];
  int32 value = 2;
}

message ResetValue {
  string counter_id = 1 [(kalix.field).entity_key = true];
}

message GetCounter {
  string counter_id = 1 [(kalix.field).entity_key = true];
}

message CurrentCounter { // <9>
  int32 value = 1;
}

service CounterService { // <10>
  option (kalix.service) = { // <11>
    type : SERVICE_TYPE_ENTITY
    component : ".domain.Counter"
  };

  rpc Increase(IncreaseValue) returns (google.protobuf.Empty);
  rpc Decrease(DecreaseValue) returns (google.protobuf.Empty);
  rpc Reset(ResetValue) returns (google.protobuf.Empty);
  rpc GetCurrentCounter(GetCounter) returns (CurrentCounter);
}
